



########### install files ###############

install( FILES group.png user.png   DESTINATION  ${DATA_INSTALL_DIR}/kuser/pics/ )




#original Makefile.am contents follow:

#
## add here all files
#pics_DATA = group.png user.png 
#
## this is the directory, where all datas are installed
## you have given the datas in data_DATA
#picsdir = $(kde_datadir)/kuser/pics/
#
#EXTRA_DIST = $(pics_DATA)
